@@ -26,7 +26,9 @@ Tooling
 Test
 * retrieve data from the information file on open
 * make sure certain values cannot be changed if writing/reading from raw files
-* add glob test to msvscpp project
+
+20141030
+* bug fix in Python-bindings
 
 20141026
 * changes for deployment
